# rapid-resolve

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  INITIAL.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  verify_ai.py  verify_database.py  verify_local_files.py  verify_r2.py  verify_schemas.py
.claude/: settings.local.json
PRPs/: multimodal-customer-service-ai.md
alembic/: env.py
alembic/versions/: 20250930_1248_e02fbc45713b_initial_schema.py
app/: __init__.py  config.py  database.py
models/: __init__.py  conversation.py  interaction.py  media.py  ticket.py
schemas/: __init__.py  interaction.py  media.py  ticket.py
services/: __init__.py  ai_service.py  local_file_service.py  r2_service.py
src/: main.py
src/api/routes/: audio.py  health.py  tickets.py
src/config/: settings.py
src/database/: connection.py  models.py  schemas.py
src/services/: language_service.py  llamaindex_service.py  privacy_screening.py  ticket_service.py  whisper_service.py
src/utils/: exceptions.py  logging.py
src/validators/: audio.py  products.py
tests/: conftest.py  test_privacy_screening.py
tests/validation_data/: pii_samples.json
utils/: __init__.py  logger.py
