[project]
name = "rapid-resolve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "boto3>=1.40.24",
    "chromadb>=1.0.20",
    "fastapi>=0.116.1",
    "llama-index>=0.13.5",
    "llama-index-llms-anthropic>=0.8.5",
    "llama-index-llms-openai>=0.5.4",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
